apps/monitoring/alert-manager/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: alertmanager-dashboard-https
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`alertmanager.powell.place`)
      kind: Rule
      services:
        - name: alertmanager
          port: 9093
      middlewares:
        - name: traefik-forward-auth
          namespace: kube-system
